fixed parametrized test and asserts